modify admin post_cover

--- a/app/views/admin/categories/_item.html.erb
+++ b/app/views/admin/categories/_item.html.erb
@@ -15,6 +15,6 @@
       <%end%>
 	</span>
     <%=link_to "编辑", edit_admin_category_path(b) %>
-    <%=link_to "删除", { action: 'destroy', id: b.id }, data: { confirm: "确认执行此操作?" }, remote: true, method: :delete %>
+    <%#=link_to "删除", { action: 'destroy', id: b.id }, data: { confirm: "确认执行此操作?" }, remote: true, method: :delete %>
   </td>
 </tr>
