--- a/app/views/admin/categories/list.html.erb
+++ b/app/views/admin/categories/list.html.erb
@@ -19,7 +19,7 @@
 			  <div class="clearfix">
 				<div class="operate_box clearfix">
 				  <%=link_to('+新建', new_admin_category_path )%>
-				  <%=link_to('批量删除', {action: 'destroy_more',format: 'js'}, :class=>"select_post")%>
+				  <%#=link_to('批量删除', {action: 'destroy_more',format: 'js'}, :class=>"select_post")%>
 				</div>
 			  </div>
 	  </div>
