--- a/app/views/admin/categories/_tool_bar.html.erb
+++ b/app/views/admin/categories/_tool_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="top_tools clearfix">
   <%=link_to '全部', admin_categories_path, class: "btn-medium mr-5 fl #{css_active?(@css_category_list)}"%>
-  <%=link_to '文章', { action: :news_list }, class: "btn-medium mr-5 fl #{css_active?(@css_news_list)}"%>
+  <%=link_to '新闻', { action: :news_list }, class: "btn-medium mr-5 fl #{css_active?(@css_news_list)}"%>
 
   <%form_tag '',:class=>"form-box fr",:method=>:get do%>
     <p align="right" class="fl mr-10">
