--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -25,6 +25,10 @@
 
 	<span class="blank10 clearfix"></span>
     <div class="form-group">
+	  <label>封面图：</label>
+	  <input type="file" name="asset_id" />
+    </div>
+    <div class="form-group">
   	  <%= f.label :content, '描述' %>
   	  <%= f.text_area :content, id: 'kind_editor', class: 'form-control' %>
 	</div>
